// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render correctly when icon is ReactNode 1`] = `
<div>
  <div
    class="rc-grid rc-hairline--top"
  >
    <div
      class="rc-grid-item"
      style="flex-basis: 25%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-hairline"
      >
        <div
          class="rc-badge__wrapper"
        >
          <i
            class="rc-badge__wrapper van-icon van-icon-shop-o"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render correctly when text prop is ReactNode 1`] = `
<div>
  <div
    class="rc-grid rc-hairline--top"
  >
    <div
      class="rc-grid-item"
      style="flex-basis: 25%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <div>
          world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render correctly when using text prop 1`] = `
<div>
  <div
    class="rc-grid rc-hairline--top"
  >
    <div
      class="rc-grid-item"
      style="flex-basis: 25%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          hello,world!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render correctly with children 1`] = `
<div>
  <div
    class="rc-grid rc-hairline--top"
  >
    <div
      class="rc-grid-item"
      style="flex-basis: 25%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-hairline"
      >
        hello,world!
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render correctly with index prop 1`] = `
<div>
  <div
    class="rc-grid"
    style="padding-left: 10px;"
  >
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px; margin-top: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px; margin-top: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px; margin-top: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
    <div
      class="rc-grid-item"
      style="flex-basis: 25%; padding-right: 10px; margin-top: 10px;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--surround rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-photo-o"
        />
        <span
          class="rc-grid-item__text"
        >
          文字
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render icon correctly 1`] = `
<div>
  <div
    class="rc-grid rc-hairline--top"
  >
    <div
      class="rc-grid-item"
      style="flex-basis: 25%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-hairline"
      >
        <i
          class="rc-badge__wrapper rc-grid-item__icon van-icon van-icon-success"
          style="color: red;"
        >
          <div
            class="rc-badge rc-badge--top-right rc-badge--fixed"
          >
            1
          </div>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render square grid with gutter correctly 1`] = `
<div>
  <div
    class="rc-grid"
    style="padding-left: 10px;"
  >
    <div
      class="rc-grid-item rc-grid-item--square"
      style="flex-basis: 50%; padding-top: 50%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--square rc-grid-item__content--surround rc-hairline"
        style="right: 10px; bottom: 10px; height: auto;"
      />
    </div>
    <div
      class="rc-grid-item rc-grid-item--square"
      style="flex-basis: 50%; padding-top: 50%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--square rc-grid-item__content--surround rc-hairline"
        style="right: 10px; bottom: 10px; height: auto;"
      />
    </div>
    <div
      class="rc-grid-item rc-grid-item--square"
      style="flex-basis: 50%; padding-top: 50%;"
    >
      <div
        class="rc-grid-item__content rc-grid-item__content--center rc-grid-item__content--square rc-grid-item__content--surround rc-hairline"
        style="right: 10px; bottom: 10px; height: auto;"
      />
    </div>
  </div>
</div>
`;
